@@ -2,6 +2,12 @@ module Netzke
   module ControllerExtensions
     def self.included(base)
       base.extend ControllerClassMethods
+      base.send(:before_filter, :set_user)
+    end
+    
+    # pickup 
+    def set_user
+      Netzke::Base.user = current_user if defined?(current_user)
     end
     
     def method_missing(method_name)
